ops/kubernetes/ha/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: attestor-api
spec:
  selector:
    app.kubernetes.io/name: attestor-api
  ports:
    - name: http
      port: 80
      targetPort: 3700
